@@ -1,6 +1,6 @@
 /***************************************************************************
  *                                                                         *
- *   Copyright (C) 2005, 2006 Christian Schoenebeck                        *
+ *   Copyright (C) 2005 - 2012 Christian Schoenebeck                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -60,6 +60,8 @@ namespace LinuxSampler {
              * Used to prevent orphaned pointers.
              */
             static void SetDeleteEnabled(const EngineChannel* pEngineChannel, bool enable);
+
+            static Mutex EngineChannelsMutex;
 
         private:
             static Mutex LockedChannelsMutex;
